Clean up project dependencies